crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__concatenating_two_string_locals_reads_them_without_retaining.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:21
    v1 = const.str "x"  ; string
    ; stmt s1 @5:5-5:21
    v2 = const.str "y"  ; string
    ; stmt s2 @6:5-6:25
    v3 = concat v1, v2  ; string
    release v1
    release v2
    release v3
    return
}
