crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__elvis_retains_an_aliased_refcounted_condition.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, string, string) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; string
    v2 = param 2  ; string
    ; stmt s0 @4:5-4:21
    v3 = helper.str_truthy v1  ; bool
    branch v3 -> bb1 (e0), bb2 (e1)
  bb1:
    retain v1
    jump bb3
  bb2:
    retain v2
    jump bb3
  bb3:
    v4 = phi [bb1: v1, bb2: v2]  ; string
    release v2
    release v1
    return v4
}
