crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__elvis_transfers_a_fresh_refcounted_condition_with_no_retain_or_release.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:32
    v1 = call T::make() ! bb1  ; string
    v2 = helper.str_truthy v1  ; bool
    branch v2 -> bb2 (e0), bb3 (e1)
  bb1:
    propagate "m() at t.mwl:4"
  bb2:
    jump bb4
  bb3:
    v3 = const.str "x"  ; string
    jump bb4
  bb4:
    v4 = phi [bb2: v1, bb3: v3]  ; string
    return v4
}
