crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__elvis_with_a_non_refcounted_condition_needs_no_retain.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, int, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    v2 = param 2  ; int
    ; stmt s0 @4:5-4:21
    v3 = helper.int_truthy v1  ; bool
    branch v3 -> bb1 (e0), bb2 (e1)
  bb1:
    jump bb3
  bb2:
    jump bb3
  bb3:
    v4 = phi [bb1: v1, bb2: v2]  ; int
    release v0
    return v4
}
